# klibc-utils-standalone

./: COPYING.md  README.md  cpio.c  halt.c  halt.sh  kill.c  losetup.c  meson.build  minips.c  mount_main.c  mount_opts.c  pivot_root.c
